--- a/POMDemo/test-output/old/Default suite/classes.html
+++ b/POMDemo/test-output/old/Default suite/classes.html
@@ -4,25 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.TestCases.OrangeHRM_Admin_TestCase</td>
+<td>com.TestCases.DataDriven_Class</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Admin</td>
+<td>OrangeHRMLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Start</td>
+<td>start</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -35,6 +31,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>teardown</td>
+<td>close</td>
 <td>&nbsp;</td></tr>
 </table>
